# RestaurantOrder

./: .gitignore  CMakeLists.txt  How_to_run.md  README.md  deploy_audio_capture.sh  main.py  menu.json  menus.json  order_processor.py  package.xml  requirements.txt  requirements_container.txt  requirements_local.txt  run_voice.py  setup_container.sh  start_restaurant_voice.sh  start_restaurant_voice_tiago.sh  voice_listener.py
config/: speech.yaml  transcriber.yaml
docs/: TIAGo_Audio_Setup.md
launch/: restaurant_voice.launch  restaurant_voice_tiago.launch
models/: README.md  download_models.sh
nodes/: order_processor_node.py  transcriber_node.py  voice_listener_node.py  voice_listener_ros_node.py
orders/: order_default_20260519_174116.json  order_default_20260521_160543.json  order_default_20260527_142432.json  order_default_20260527_142607.json  order_default_20260528_215547.json  order_default_20260613_150408.json  order_default_20260613_170104.json  order_default_20260613_182445.json  order_default_20260613_182828.json
plans/: inform_bartender.py  notify_chef.py  take_order_emsrc.py  take_order_full.py  take_order_voice.py
scripts/: alsa_audio_bridge.py
src/: audio_input.py  dialogue_manager.py  hotword.py  ipc.py  menu_dialogue.py  models.py  order_parser.py  order_state.py  ros_bridge.py  speech_to_text.py  streaming_stt.py  streaming_stt_ros.py  utils.py  vad.py
tests/: test_order_parser.py  test_order_state.py
