<?xml version="1.0"?>
<package format="2">
  <name>restaurant_language_unit</name>
  <version>0.1.0</version>
  <description>
    Voice-driven restaurant ordering pipeline: always-on hotword detection,
    streaming speech-to-text (faster-whisper), dialogue management, and
    structured order output.
  </description>

  <maintainer email="lcastor@lincoln.ac.uk">LCASTOR</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>audio_common_msgs</depend>

  <export>
  </export>
</package>
